# flutter_download_manager

./: .gitignore  .metadata  DESIGN.md  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
download_manager_data/: tasks.json
ios/: Podfile  python_bridge.podspec
ios/Classes/: python_bridge.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: platform_constants.dart
lib/framework/: platform_plugin.dart  plugin_registry.dart
lib/model/: download_task.dart
lib/platform/: bridge_base.dart
lib/platform/douyin/: douy  douyin_bridge.dart  douyin_plugin.dart
lib/platform/xhs/: xhs_bridge.dart  xhs_plugin.dart
lib/service/: cookie_store.dart  database_service.dart  douyin_api_service.dart  download_task_manager.dart  gallery_service.dart  http_download_service.dart  http_fallback.dart  native_download_service.dart  python_runner.dart  python_service.dart
lib/ui/screens/: cookie_manage_screen.dart  download_screen.dart  home_screen.dart  platform_shell.dart  settings_screen.dart  tasks_screen.dart
lib/ui/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
python/: .cookie_config.json  dy_bridge.py  requirements.txt  runner.py  xhs_bridge.py
src/: CMakeLists.txt  download_engine.cpp  download_engine.h  python_bridge.cpp  python_bridge.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
